# gpis

./: .gitignore  CMakeLists.txt  README.md  flake.nix  gpis.nix  pyproject.toml
cpp/: CMakeLists.txt
example/: example_gp.py
mex/: CMakeLists.txt  test_gp.cpp
src/: _gpis.cpp  contours.cpp
src/gpis/: GPShape.py  __init__.py  _gpis.pyi
