[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "gpis"
version = "0.0.1"
description = "Gaussian Process Implicit Surfaces for shape estimation"
license = {text = "GNU General Public License v3 (GPLv3)"}
requires-python = ">= 3.9"

[tools.scikit-build]
sdist.exclude = [
  "flake.*",
]
wheel.exclude = ["**.cpp", "**.hpp", "**.h"]

[dependency-groups]
dev = [
    "numpy",
    "matplotlib",
    "mypy",
    "pandas-stubs",
]
